# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/notification/distributed_notification_service/notification.gni")
import("//build/ohos.gni")

cflags = []

config("notification_ndk_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "${inner_api_path}",
    "${notification_ndk_path}/include",
  ]

  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }
}

config("notification_ndk_public_config") {
  visibility = [ ":*" ]

  include_dirs = [ "${notification_ndk_path}/include" ]
}

ohos_shared_library("ohnotification") {
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  branch_protector_ret = "pac_ret"

  configs = [ ":notification_ndk_config" ]

  public_configs = [ ":notification_ndk_public_config" ]

  sources = [ "src/notification.cpp" ]

  deps = [ "${frameworks_module_ans_path}:ans_innerkits" ]

  external_deps = [
    "ability_base:base",
    "ability_base:zuri",
    "c_utils:utils",
    "hilog:libhilog",
  ]
  output_extension = "so"
  innerapi_tags = [ "ndk" ]
  subsystem_name = "${subsystem_name}"
  part_name = "${component_name}"
}
